# identity-ruby

./: .gitignore  .travis.yml  Gemfile  README.md  Rakefile  Steepfile  pyproject.toml  run-ci.py  tanker-identity.gemspec  tbump.toml
.github/workflows/: checks.yml  deploy.yml  install.yml
examples/sinatra/: Gemfile  README.md  server.rb
lib/: tanker-identity.rb
lib/tanker/: crypto.rb  identity.rb  version.rb
lib/tanker/identity/: version.rb
sig/: crypto.rbs  identity.rbs  tanker.rbs  version.rbs
sorbet/rbi/: todo.rbi
sorbet/rbi/gems/: rbnacl.rbi  rspec-core.rbi  simplecov-html.rbi
sorbet/rbi/hidden-definitions/: errors.txt  hidden.rbi
spec/: spec_helper.rb
spec/tanker/: crypto_spec.rb  identity_spec.rb  version_spec.rb
