[tool.poetry]
name = "tanker-ruby-identity-sdk"
version = "0.1.0"
description = "Ruby Identity SDK for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2021.6.3413", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"


[tool.poetry.dev-dependencies]
mypy = "^0.790"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
