[tool.poetry]
name = "tanker-ruby-identity-sdk"
version = "0.1.0"
description = "Ruby Identity SDK for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tbump = "6.3.2"

[tool.poetry.dev-dependencies]
black = "21.6b0"
flake8 = "3.9.2"
mypy = "^0.790"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
