[tool.poetry]
name = "tanker-ruby-identity-sdk"
version = "0.1.0"
description = "Ruby Identity SDK for Tanker"
authors = ["Tanker team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tbump = "6.9.0"

[tool.poetry.dev-dependencies]
black = "24.3.0"
flake8 = "7"
flake8-comprehensions = "3.14.0"
isort = "5.10.1"
mypy = "1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
